# api/handlers/models/order.go
@@ -1,0 +1,10 @@
+package models
+
+type Order struct {
+	BookId      string `json:"book_id"`
+	Description string `json:"description"`
+}
+
+type ListOrders struct {
+	Orders []Order `json:"orders"`
+}
